# greppy

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
src/: bounded_queue.cpp  main.cpp  parser.cpp
src/cpp/: helpers.cpp  match_handler.cpp  parser.cpp  utils.cpp
src/headers/: bounded_queue.h  match_handler.h  utils.h
src/internal/: helpers.h  match_handler.h  parser.h
src/public/: helpers.cpp  match_handler.cpp  parser.cpp
tests/: helpers_tests.cpp  match_handler_tests.cpp  parser_tests.cpp  tests.cpp  utils_tests.cpp
